k8s/infrastructure/configs/traefik/traefik-ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: proxmox-external
          port: 8006
          scheme: https
          serversTransport: insecure-transport
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 8006
      targetPort: 8006
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: ${SECRET_PROXMOX_IP}
    ports:
      - port: 8006
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: homeassistant-external
          port: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: ${SECRET_HOMEASSISTANT_IP}
    ports:
      - port: 8123
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: portainer-external
          port: 9123
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 9123
      targetPort: 9123
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: portainer-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: ${SECRET_NET_LXC_IP}
    ports:
      - port: 9123
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: adguard-external
          port: 8012
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 8012
      targetPort: 8012
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: ${SECRET_NET_LXC_IP}
    ports:
      - port: 8012
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qnapui
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qnap.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: qnapui-external
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: qnapui-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: qnapui-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: ${SECRET_NAS_IP}
    ports:
      - port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustfs-webui
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rustfs.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: rustfs-webui-external
          port: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs-webui-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rustfs-webui-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: ${SECRET_VPS_IP}
    ports:
      - port: 9001
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustfs-s3
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    # Path-style access and virtual host-style access
    - match: Host(`s3.rustfs.${SECRET_DOMAIN}`) || HostRegexp(`^[a-z0-9-]+\.s3\.rustfs\.${SECRET_DOMAIN}$`)
      kind: Rule
      services:
        - name: rustfs-s3-external
          port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs-s3-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rustfs-s3-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: ${SECRET_VPS_IP}
    ports:
      - port: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: termix
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`termix.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: termix-external
          port: 9456
---
apiVersion: v1
kind: Service
metadata:
  name: termix-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 9456
      targetPort: 9456
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: termix-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: ${SECRET_VPS_IP}
    ports:
      - port: 9456
